# Graia-CLI

./: README.md  app.py  graia_cli.py  pyproject.toml  recommend.yml  setup.py
.github/workflows/: python-publish.yml  python-publish1.yml
Graia_CLI/: graia_cli.py  graia_installer.py  scaffold.py
Graia_CLI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
graiax/: main.py
graiax/commands/: install.py
graiax_cli/: README.md  config.py  graia_cli.py  graia_installer.py  graiax.py  initializer.py  installer.py  main.py  scaffold.py  template.py
graiax_cli/commands/: README.md  init.py  install.py  new.py
